@@ -46,7 +46,8 @@ try {
 
     fs.writeFileSync(
       cfg_sample_file,
-      '// file di configurazione per `create-favicons`.\n// I valori indicati sono quelli di default.\n\n' +
+      '// file di configurazione per `create-favicons`.\n// I valori indicati sono quelli di default.\n' +
+      '// Per avviare la generazione delle favicon digitare `npx create-favicons` dalla dir corrente.\n\n' +
       'const params = [{\n' +
       default_params +
       '\n}];\n\n' +
